[project]
name = "ragdoll-comfy-nodes"
version = "0.1.0"
description = "ComfyUI nodes for ragdoll"
authors = [
    {name = "the-dream-machine"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3 (>=1.36.16,<2.0.0)",
    "cuid2 (>=2.0.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
